--- a/index.html
+++ b/index.html
@@ -29,5 +29,36 @@
         <a href="#" class="btn btn--white btn--animated">Discover Our Tours</a>
       </div>
     </header>
+
+    <section class="grid-test">
+      <div class="row">
+        <div class="col-1-of-2">this is a column</div>
+        <div class="col-1-of-2">this is a column</div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-3">this is a column</div>
+        <div class="col-1-of-3">this is a column</div>
+        <div class="col-1-of-3">this is a column</div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-3">this is a column</div>
+        <div class="col-2-of-3">this is a column</div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-4">this is a column</div>
+        <div class="col-1-of-4">this is a column</div>
+        <div class="col-1-of-4">this is a column</div>
+        <div class="col-1-of-4">this is a column</div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-4">this is a column</div>
+        <div class="col-1-of-4">this is a column</div>
+        <div class="col-2-of-4">this is a column</div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-4">this is a column</div>
+        <div class="col-3-of-4">this is a column</div>
+      </div>
+    </section>
   </body>
 </html>
