Add about section with header

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
       </div>
     </header>
 
+    <main>
+      <section class="section-about">
+        <h2 class="heading-secondary">Exciting tours for adventurous people</h2>
+      </section>
+    </main>
+    <!-- 
     <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">this is a column</div>
@@ -60,5 +66,6 @@
         <div class="col-3-of-4">this is a column</div>
       </div>
     </section>
+    -->
   </body>
 </html>
