--- a/index.html
+++ b/index.html
@@ -32,15 +32,37 @@
 
     <main>
       <section class="section-about">
-        <h2 class="heading-secondary">Exciting tours for adventurous people</h2>
+        <div class="u-center-text u-margin-bottom-8">
+          <h2 class="heading-secondary">
+            Exciting tours for adventurous people
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary">
+              You're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Accusantium assumenda quod, distinctio totam provident eligendi
+              mollitia debitis expedita nam labore.
+            </p>
+            <h3 class="heading-tertiary">
+              Live adventures like you never have before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Accusantium assumenda quod, distinctio totam provident eligendi
+              mollitia debitis expedita nam labore.
+            </p>
+          </div>
+          <div class="col-1-of-2">images</div>
+        </div>
       </section>
     </main>
     <!-- 
     <section class="grid-test">
-      <div class="row">
-        <div class="col-1-of-2">this is a column</div>
-        <div class="col-1-of-2">this is a column</div>
-      </div>
+      
       <div class="row">
         <div class="col-1-of-3">this is a column</div>
         <div class="col-1-of-3">this is a column</div>
