--- a/index.html
+++ b/index.html
@@ -134,7 +134,14 @@
           <h2 class="heading-secondary">Most popular tours</h2>
         </div>
         <div class="row">
-          <div class="col-1-of-3">this is a column</div>
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">Front</div>
+              <div class="card__side card__side--back card__side--back-1">
+                Back
+              </div>
+            </div>
+          </div>
           <div class="col-1-of-3">this is a column</div>
           <div class="col-1-of-3">this is a column</div>
         </div>
