--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </header>
 
     <main>
+      <!-- About section -->
       <section class="section-about">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
@@ -76,6 +77,8 @@
           </div>
         </div>
       </section>
+
+      <!-- Feature section -->
       <section class="section__features">
         <div class="row">
           <div class="col-1-of-4">
@@ -129,11 +132,13 @@
         </div>
       </section>
 
+      <!-- Tour section -->
       <section class="section-tours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">Most popular tours</h2>
         </div>
         <div class="row">
+
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front">
@@ -165,6 +170,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front">
@@ -195,7 +201,8 @@
                 </div>
               </div>
             </div>
-          </div>      
+          </div>
+
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front">
@@ -230,6 +237,11 @@
       </div>
       </div>
         </div>
+        <!-- Tour section button  -->
+        <div class="u-center-text u-margin-top-big">
+          <a href="#" class="btn btn--green">Discover all tours</a>
+        </div>
+
       </section>
     </main>
     <!-- 
