--- a/index.html
+++ b/index.html
@@ -238,10 +238,20 @@
       </div>
         </div>
         <!-- Tour section button  -->
-        <div class="u-center-text u-margin-top-big">
+        <div class="u-center-text u-margin-top-huge">
           <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
+      </section>
 
+      <!-- Stories section -->
+      <section class="section__stories">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">We make people genuinely happy</h2>
+        </div>
+
+        <div class="row">
+          <div class="story">Text</div>
+        </div>
       </section>
     </main>
     <!-- 
