Add second story and styles text with shape outside

--- a/index.html
+++ b/index.html
@@ -250,7 +250,31 @@
         </div>
 
         <div class="row">
-          <div class="story">Text</div>
+          <div class="story">
+            <figure class="story__shape">
+              <img src="img/nat-8.jpg" alt="Woman on a tour" class="story__img">
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam ea accusantium rerum, labore totam accusamus animi molestias deleniti atque dolorem eveniet corporis vero maxime. Obcaecati blanditiis eius, sint eligendi culpa, aliquid, distinctio esse porro soluta itaque corporis quaerat ducimus aperiam?
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img src="img/nat-9.jpg" alt="Man on a tour" class="story__img">
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam ea accusantium rerum, labore totam accusamus animi molestias deleniti atque dolorem eveniet corporis vero maxime. Obcaecati blanditiis eius, sint eligendi culpa, aliquid, distinctio esse porro soluta itaque corporis quaerat ducimus aperiam?
+              </p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
