Add name and blur filter effect on hover, read more button to stories section

--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
           <div class="story">
             <figure class="story__shape">
               <img src="img/nat-8.jpg" alt="Woman on a tour" class="story__img">
+              <figcaption class="story__caption">Mary Smith</figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
@@ -267,14 +268,18 @@
           <div class="story">
             <figure class="story__shape">
               <img src="img/nat-9.jpg" alt="Man on a tour" class="story__img">
+              <figcaption class="story__caption">Jack Wilson</figcaption>
             </figure>
             <div class="story__text">
-              <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+              <h3 class="heading-tertiary u-margin-bottom-small">Wow, my life is completely different now</h3>
               <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam ea accusantium rerum, labore totam accusamus animi molestias deleniti atque dolorem eveniet corporis vero maxime. Obcaecati blanditiis eius, sint eligendi culpa, aliquid, distinctio esse porro soluta itaque corporis quaerat ducimus aperiam?
               </p>
             </div>
           </div>
+        </div>
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
         </div>
       </section>
     </main>
