--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
                   <label for="email" class="form__label">Email address</label>
                 </div>
 
-                <div class="form-group">
-                  <div class="form__radio-group">
+                <div class="form-group u-margin-bottom-medium">
+                  <div class="form__radio-group ">
                     <input type="radio" class="form__radio-input" id="small" name="size">
                     <label for="small" class="form__radio-label">
                       <span class="form__radio-button"></span>
@@ -328,6 +328,10 @@
                       Large tour group
                     </label>
                   </div>
+                </div>
+
+                <div class="form-group">
+                  <button class="btn btn--green">Next step &rarr;</button>
                 </div>
               </form>
             </div>
