--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <nav class="navigation__nav">
     <ul class="navigation__list">
-      <li class="navigation__item"><a href="#" class="navigation__link">About Natours</a></li>
+      <li class="navigation__item"><a href="#about" class="navigation__link">About Natours</a></li>
       <li class="navigation__item"><a href="#" class="navigation__link">Your benefits</a></li>
       <li class="navigation__item"><a href="#" class="navigation__link">Popular tours</a></li>
       <li class="navigation__item"><a href="#" class="navigation__link">Stories</a></li>
@@ -52,7 +52,7 @@
 
     <main>
       <!-- About section -->
-      <section class="section-about">
+      <section class="section-about" id="about">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exciting tours for adventurous people
