--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   <nav class="navigation__nav">
     <ul class="navigation__list">
       <li class="navigation__item"><a href="#about" class="navigation__link">About Natours</a></li>
-      <li class="navigation__item"><a href="#" class="navigation__link">Your benefits</a></li>
-      <li class="navigation__item"><a href="#" class="navigation__link">Popular tours</a></li>
-      <li class="navigation__item"><a href="#" class="navigation__link">Stories</a></li>
-      <li class="navigation__item"><a href="#" class="navigation__link">Book now</a></li>
+      <li class="navigation__item"><a href="#features" class="navigation__link">Your benefits</a></li>
+      <li class="navigation__item"><a href="#tours" class="navigation__link">Popular tours</a></li>
+      <li class="navigation__item"><a href="#stories" class="navigation__link">Stories</a></li>
+      <li class="navigation__item"><a href="#book" class="navigation__link">Book now</a></li>
     </ul>
   </nav>
 </div>
@@ -99,7 +99,7 @@
       </section>
 
       <!-- Feature section -->
-      <section class="section__features">
+      <section class="section__features" id="features">
         <div class="row">
           <div class="col-1-of-4">
             <div class="feature-box">
@@ -153,7 +153,7 @@
       </section>
 
       <!-- Tour section -->
-      <section class="section-tours">
+      <section class="section-tours" id="tours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">Most popular tours</h2>
         </div>
@@ -264,7 +264,7 @@
       </section>
 
       <!-- Stories section -->
-      <section class="section__stories">
+      <section class="section__stories" id="stories">
         <div class="bg-video">
           <!-- Background video -->
           <video class="bg-video__content" autoplay muted loop>
