--- a/index.html
+++ b/index.html
@@ -386,6 +386,24 @@
         </div>
       </div>
     </footer>
+
+    <div class="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+        </div>
+        <div class="popup__right">
+          <h2 class="heading-secondary">Start booking now</h2>
+          <h3 class="heading-tertiary">Important &ndash; Please read these terms before booking</h3>
+          <p class="popup__text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem, nihil aliquid. Nihil minima, possimus cumque officiis iste similique at et, qui aliquid nostrum sapiente debitis perferendis sequi odio amet necessitatibus corporis natus nulla laboriosam asperiores quae quasi beatae sit. Aut magnam totam maxime eveniet eaque, doloribus aperiam voluptatem reprehenderit obcaecati.
+          </p>
+          <a href="#" class="btn btn--green">Book now</a>
+        </div>
+      </div>
+    </div>
+
     <!-- 
     <section class="grid-test">
       
