Add columns with auto hyphenation to text content

--- a/index.html
+++ b/index.html
@@ -394,10 +394,10 @@
           <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
         </div>
         <div class="popup__right">
-          <h2 class="heading-secondary">Start booking now</h2>
-          <h3 class="heading-tertiary">Important &ndash; Please read these terms before booking</h3>
+          <h2 class="heading-secondary u-margin-bottom-small ">Start booking now</h2>
+          <h3 class="heading-tertiary u-margin-bottom-small ">Important &ndash; Please read these terms before booking</h3>
           <p class="popup__text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem, nihil aliquid. Nihil minima, possimus cumque officiis iste similique at et, qui aliquid nostrum sapiente debitis perferendis sequi odio amet necessitatibus corporis natus nulla laboriosam asperiores quae quasi beatae sit. Aut magnam totam maxime eveniet eaque, doloribus aperiam voluptatem reprehenderit obcaecati.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, sint corporis optio magni temporibus perferendis voluptatem! Voluptate molestias quas beatae ut. Labore saepe sapiente consequuntur, vitae non animi quos est itaque ipsa velit maxime? Odio sit velit tenetur exercitationem, accusantium a autem omnis. Debitis nobis natus deserunt accusamus, maxime voluptates? Deserunt animi fuga unde porro, beatae dolorum natus quos odit.
           </p>
           <a href="#" class="btn btn--green">Book now</a>
         </div>
