Add functionality to popup box

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <span class="heading-primary--main">Outdoors</span>
           <span class="heading-primary--sub">is where life happens</span>
         </h1>
-        <a href="#" class="btn btn--white btn--animated">Discover Our Tours</a>
+        <a href="#tours" class="btn btn--white btn--animated">Discover Our Tours</a>
       </div>
     </header>
 
@@ -76,7 +76,7 @@
               Accusantium assumenda quod, distinctio totam provident eligendi
               mollitia debitis expedita nam labore.
             </p>
-            <a href="#" class="btn-text">Learn more &rarr;</a>
+            <a href="#tours" class="btn-text">Learn more &rarr;</a>
           </div>
           <div class="col-1-of-2">
             <div class="composition">
@@ -185,7 +185,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$297</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -217,7 +217,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$497</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -249,7 +249,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$897</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
             </div>
           </div>
@@ -387,13 +387,15 @@
       </div>
     </footer>
 
-    <div class="popup">
+    <!-- Popup box -->
+    <div class="popup" id="popup">
       <div class="popup__content">
         <div class="popup__left">
           <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
           <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
         </div>
         <div class="popup__right">
+          <a href="#tours" class="popup__close">&times;</a>
           <h2 class="heading-secondary u-margin-bottom-small ">Start booking now</h2>
           <h3 class="heading-tertiary u-margin-bottom-small ">Important &ndash; Please read these terms before booking</h3>
           <p class="popup__text">
